--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -69,3 +69,12 @@
 .js-focus-visible :focus:not(.focus-visible) {
   outline: none;
 }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
