--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -59,7 +59,7 @@
     margin-bottom: 48px;
   }
 
-  & button {
+  & a {
     background-color: transparent;
     border: 4px solid #ffffff;
     box-sizing: border-box;
@@ -118,7 +118,7 @@
       min-width: 113px;
     }
 
-    & button {
+    & a {
       width: 186px;
     }
   }
@@ -160,7 +160,7 @@
       display: none;
     }
 
-    & button {
+    & a {
       min-width: 290px;
       width: 92%;
       position: absolute;
