--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -219,6 +219,7 @@
       width: 90.63vw;
       min-width: 290px;
       height: 91.25vw;
+      max-height: 292px;
       padding: 50px 45px;
       justify-content: space-between;
     }
