--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -45,6 +45,8 @@
   &__item {
     display: flex;
     gap: 30px;
+    max-width: 340px;
+    position: relative;
 
     & h3 {
       font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -156,26 +158,16 @@
       color: #ffffff;
       margin: 0;
     }
+  }
 
-    &::before {
-      content: "";
-      width: 340px;
-      height: 2px;
-      background: rgba(209, 10, 66, 0.2);
-      position: absolute;
-      left: 125%;
-      top: 50%;
-    }
-
-    &::after {
-      content: "";
-      width: 340px;
-      height: 2px;
-      background: rgba(209, 10, 66, 0.2);
-      position: absolute;
-      right: 125%;
-      top: 50%;
-    }
+  .advantages__item--border::after {
+    content: "";
+    width: 340px;
+    height: 2px;
+    background: rgba(209, 10, 66, 0.2);
+    position: absolute;
+    right: -7px;
+    bottom: -77px;
   }
 }
 
@@ -249,6 +241,10 @@
         font-size: 16px;
       }
     }
+  }
+
+  .advantages__item--border::after {
+    display: none;
   }
 }
 
