--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -9,6 +9,13 @@
   &__container {
     display: flex;
     justify-content: space-between;
+    gap: 30px;
+  }
+
+  &__contact {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 20px;
   }
 
   & a {
