--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -35,6 +35,9 @@
     width: 280px;
     display: flex;
     flex-direction: column;
+    max-height: 462px;
+    overflow-y: scroll;
+    scrollbar-width: none;
 
     & span {
       font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -113,7 +116,7 @@
 
   &__item {
     width: 41vw;
-    height: 211px;
+    min-height: 211px;
     max-width: 634px;
     padding: 28px;
     padding-top: 24px;
@@ -147,6 +150,7 @@
       align-items: center;
       color: #1c3374;
       margin: 0;
+      margin-bottom: 20px;
     }
 
     & button {
