--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -72,7 +72,7 @@
     position: absolute;
     width: 364px;
     height: 228px;
-    bottom: -115px;
+    top: 288px;
     right: 32.5%;
 
     &::before {
@@ -164,6 +164,7 @@
     &__video {
       width: 266px;
       height: 167px;
+      top: auto;
       bottom: -83px;
       align-items: center;
       right: auto;
